# mantium-client-py

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pydocstyle  CONTRIBUTING.md  CoC.md  README.md  SECURITY.md  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
mantium/client/: api_client.py
mantium/client/invoke_tasks/: __init__.py  build.py  utils.py
mantium_client/: api_client.py
mantium_client/invoke_tasks/: build.py  test.py
scripts/: run-mypy
tests/: conftest.py  test_nothing.py
tests/api_client/: test_mantium_client.py
