[tool.poetry]
name = "mantium-client"
version = "0.1.2"
license = "Apache-2.0"
description = "Python client for the Mantium API"
authors = ["Mantium <support@mantiumai.com>"]
readme = "README.md"
packages = [{include = "mantium"}]
repository = "https://github.com/mantiumai/mantium-client-py"
homepage = "https://github.com/mantiumai/mantium-client-py"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Pre-processors',
    'Operating System :: OS Independent'
]
keywords = ["mantium", "ChatGPT", "AI"]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
pre-commit = "2.20.0"


[tool.poetry.group.dev.dependencies]
invoke = "^1.7.3"
pre-commit = "^2.20.0"
mypy = "^0.982"
types-invoke = "^1.7.3.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
validate-pyproject = "^0.13"
flake8 = "^6.0.0"

[[tool.poetry.source]]
name = "dugong"
url = "https://git.mantiumai.com/api/v4/groups/278/-/packages/pypi/simple"
default = false
secondary = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
