[tool.poetry]
name = "mantium-client"
version = "0.1.6"
license = "Apache-2.0"
description = "Python client for the Mantium API"
authors = ["Mantium <support@mantiumai.com>"]
readme = "README.md"
repository = "https://github.com/mantiumai/mantium-client-py"
homepage = "https://github.com/mantiumai/mantium-client-py"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Pre-processors',
    'Operating System :: OS Independent'
]
keywords = ["mantium", "ChatGPT", "AI"]


[tool.poetry.dependencies]
fastapi = "^0.97.0"
mantium-spec = "1.0.740"
pre-commit = "2.20.0"
pydantic = "^1.10.2"
python = "^3.8.1"
requests = "^2.31.0"
tenacity = "^8.2.2"
types-requests = "^2.31.0.1"


[tool.poetry.group.dev.dependencies]
invoke = "^1.7.3"
pre-commit = "^2.20.0"
mypy = "^0.982"
types-invoke = "^1.7.3.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
validate-pyproject = {version = "^0.13", extras = ["all"]}
flake8 = "^6.0.0"

[[tool.poetry.source]]
name = "dugong"
url = "https://git.mantiumai.com/api/v4/groups/278/-/packages/pypi/simple"
default = false
secondary = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
